Project1Vanquish/force-app/main/default/objects/Order/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Amount of money paid towards the order</description>
    <label>Payment Amount</label>
    <summarizedField>Payment_Receipt__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Receipt__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>