Project1Vanquish/force-app/main/default/objects/Order/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Order_Total__c -  Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>